# arcadia

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arcadia/: __init__.py  alignment.py  cli.py  grid.py  palette.py  pipeline.py  svg.py
examples/: generate_samples.py
tests/: conftest.py  test_alignment.py  test_grid.py  test_palette.py  test_pipeline.py  test_svg.py
