[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcadia"
version = "0.1.0"
description = "Convert AI-generated pixel art PNGs into true pixel art SVGs"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
arcadia = "arcadia.cli:main"

[tool.setuptools.packages.find]
include = ["arcadia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
